--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "About | John Ensley"
-description: "Resume page for John Ensley"
+title: "About | Leslie Lee"
+description: "Resume page for Leslie Lee"
 
 # Build settings
 markdown: kramdown
